# hw-7

./: alembic.ini  config.ini  main.py  models.py  pyproject.toml  seed.py  sqlalchemy_study.db
alembic/versions/: 5822cfe8cbc7_init.py
