[tool.poetry]
name = "hw-7"
version = "0.1.0"
description = ""
authors = ["Hannakua <alucky1181@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_7"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.19"
alembic = "^1.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
